fix the clear both to be invisible

--- a/test3/css/style.css
+++ b/test3/css/style.css
@@ -73,6 +73,7 @@ nav {
 }
 .nav > li:after {
   clear: both;
+  display: none;
 }
 .nav > li:hover {
   color: #fff;
